ISSUE: PURPOSE: Fix autogrow textareas, prevent adding height on every keystroke, not just when text doesn't fit in textarea. DESCRIPTION: The css for data-entry-textarea applying a padding in rem still breaks autogrow behavior on each keystroke after a new line is added, trying a change to a hard coded 2px for padding height, which seems to work editing css in browser.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1422,7 +1422,7 @@ textarea {
 	font-size: .875rem;
 	line-height: 1.5em;
 	border-radius: .2rem;
-	padding: .25rem .5rem;
+	padding: 2px .5rem;
 	display: block;
 	background-color: #fff;
 	background-clip: padding-box;
